[gd_scene load_steps=5 format=2]

[ext_resource path="res://Prefabs/PefabSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=4]

[sub_resource type="PhysicsMaterial" id=57]
friction = 0.0
bounce = 0.1
absorbent = true

[sub_resource type="CircleShape2D" id=38]

[node name="Player" type="RigidBody2D" groups=["Player"]]
physics_interpolation_mode = 2
physics_material_override = SubResource( 57 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 2.5
angular_damp = 0.0
script = ExtResource( 4 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 1 )]
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Player"]]
scale = Vector2( 8, 8 )
shape = SubResource( 38 )
